# coletordedadosclimaticos

./: .env  LICENSE  README.md  database.db  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  settings.py
coletor_service/: Dockerfile  README.md  pyproject.toml  requirements.txt  settings.py
coletor_service/src/: db.py  main.py  models.py  routes.py  schemas.py  services.py
docs/: entregas.md
gateway_service/: pyproject.toml  settings.py
gateway_service/src/: main.py  routes.py  schemas.py
newsletter_service/: Dockerfile  README.md  pyproject.toml  settings.py
newsletter_service/src/: main.py  models.py  routes.py  schemas.py  services.py
src/: main.py  models.py  schemas.py  services.py
src/routers/: coleta.py
web_service/: Dockerfile  README.md  pyproject.toml  settings.py
web_service/src/: Home.py
web_service/src/pages/: 1_Dados.py  2_Inscrições.py
