[tool.poetry]
name = "web-service"
version = "0.1.0"
description = "Web service - coletor de dados climaticos"
authors = ["Murilo Lobo Teixeira <murilo.lobo@ufms.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.3.1"
streamlit = "^1.36.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
